--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/vite": "^4.1.16",
         "autoprefixer": "^10.4.21",
         "axios": "^1.11.0",
