--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.16",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "alpinejs": "^3.15.1"
     }
 }
